; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_image.c_pt_image_add_file.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_image.c_pt_image_add_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pt_image = type { i32 }
%struct.pt_asid = type { i32 }
%struct.pt_section = type { i32 }

@pte_invalid = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pt_image_add_file(%struct.pt_image* %0, i8* %1, i32 %2, i32 %3, %struct.pt_asid* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.pt_image*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.pt_asid*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.pt_section*, align 8
  %15 = alloca %struct.pt_asid, align 4
  %16 = alloca i32, align 4
  store %struct.pt_image* %0, %struct.pt_image** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store %struct.pt_asid* %4, %struct.pt_asid** %12, align 8
  store i32 %5, i32* %13, align 4
  %17 = load %struct.pt_image*, %struct.pt_image** %8, align 8
  %18 = icmp ne %struct.pt_image* %17, null
  br i1 %18, label %19, label %22

19:                                               ; preds = %6
  %20 = load i8*, i8** %9, align 8
  %21 = icmp ne i8* %20, null
  br i1 %21, label %25, label %22

22:                                               ; preds = %19, %6
  %23 = load i32, i32* @pte_invalid, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %7, align 4
  br label %60

25:                                               ; preds = %19
  %26 = load %struct.pt_asid*, %struct.pt_asid** %12, align 8
  %27 = call i32 @pt_asid_from_user(%struct.pt_asid* %15, %struct.pt_asid* %26)
  store i32 %27, i32* %16, align 4
  %28 = load i32, i32* %16, align 4
  %29 = icmp slt i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %25
  %31 = load i32, i32* %16, align 4
  store i32 %31, i32* %7, align 4
  br label %60

32:                                               ; preds = %25
  store %struct.pt_section* null, %struct.pt_section** %14, align 8
  %33 = load i8*, i8** %9, align 8
  %34 = load i32, i32* %10, align 4
  %35 = load i32, i32* %11, align 4
  %36 = call i32 @pt_mk_section(%struct.pt_section** %14, i8* %33, i32 %34, i32 %35)
  store i32 %36, i32* %16, align 4
  %37 = load i32, i32* %16, align 4
  %38 = icmp slt i32 %37, 0
  br i1 %38, label %39, label %41

39:                                               ; preds = %32
  %40 = load i32, i32* %16, align 4
  store i32 %40, i32* %7, align 4
  br label %60

41:                                               ; preds = %32
  %42 = load %struct.pt_image*, %struct.pt_image** %8, align 8
  %43 = load %struct.pt_section*, %struct.pt_section** %14, align 8
  %44 = load i32, i32* %13, align 4
  %45 = call i32 @pt_image_add(%struct.pt_image* %42, %struct.pt_section* %43, %struct.pt_asid* %15, i32 %44, i32 0)
  store i32 %45, i32* %16, align 4
  %46 = load i32, i32* %16, align 4
  %47 = icmp slt i32 %46, 0
  br i1 %47, label %48, label %52

48:                                               ; preds = %41
  %49 = load %struct.pt_section*, %struct.pt_section** %14, align 8
  %50 = call i32 @pt_section_put(%struct.pt_section* %49)
  %51 = load i32, i32* %16, align 4
  store i32 %51, i32* %7, align 4
  br label %60

52:                                               ; preds = %41
  %53 = load %struct.pt_section*, %struct.pt_section** %14, align 8
  %54 = call i32 @pt_section_put(%struct.pt_section* %53)
  store i32 %54, i32* %16, align 4
  %55 = load i32, i32* %16, align 4
  %56 = icmp slt i32 %55, 0
  br i1 %56, label %57, label %59

57:                                               ; preds = %52
  %58 = load i32, i32* %16, align 4
  store i32 %58, i32* %7, align 4
  br label %60

59:                                               ; preds = %52
  store i32 0, i32* %7, align 4
  br label %60

60:                                               ; preds = %59, %57, %48, %39, %30, %22
  %61 = load i32, i32* %7, align 4
  ret i32 %61
}

declare dso_local i32 @pt_asid_from_user(%struct.pt_asid*, %struct.pt_asid*) #1

declare dso_local i32 @pt_mk_section(%struct.pt_section**, i8*, i32, i32) #1

declare dso_local i32 @pt_image_add(%struct.pt_image*, %struct.pt_section*, %struct.pt_asid*, i32, i32) #1

declare dso_local i32 @pt_section_put(%struct.pt_section*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
